# ITL.Braincell

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  braincell_mcp_client.py  build-images.ps1  build-images.sh  cleanup.ps1  cleanup.sh  deploy.ps1  deploy.sh  docker-compose.override.example.yml  docker-compose.yml  docker-entrypoint.sh  init-consolidated.sql  init.sql  kind-config.yaml  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.ps1  run_tests.sh  setup.ps1  setup.sh  start-mcp-server.sh  start.ps1  start.sh
.github/: copilot-instructions.md
.github/agents/: braincell-developer.agent.md
.github/workflows/: _reusable-ci.yml  _reusable-publish.yml  _reusable-release.yml  ci.yml  on-push.yml  on-tag.yml  publish.yml
alembic/: env.py
alembic/versions/: 8f2597cc30e3_initial_schema_for_all_cells.py
charts/ITL.Braincell/: Chart.yaml  NOTES.txt  README.md  rendered.yaml  values-production.yaml  values-staging.yaml  values.yaml  weaviate-defaults.yaml
charts/weaviate-operator/: Chart.yaml  NOTES.txt  README.md  values.yaml
docs/: README.md
docs/api/: ARCHITECTURE.md  ENDPOINTS.md
examples/: example_agent.py
init/: 00_extensions.sql  01_interactions.sql  02_conversations.sql  03_design_decisions.sql  04_architecture_notes.sql  05_files_discussed.sql  06_code_snippets.sql  07_context_snapshots.sql  08_memory_sessions.sql  09_cell_notes.sql  10_research_questions.sql
k8s/: manage-secrets.ps1  manage-secrets.sh
mcp/: Dockerfile  requirements.txt
src/: __init__.py  main.py
tests/: test_get_relevant_context.py
(+205 files in other folders)
