[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "itl-braincell"
version = "0.1.0"
description = "BrainCell core library — cells, services, and data models for the ITL memory platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.4.0",
    "jinja2>=3.1.3",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.13.0",
    "weaviate-client>=4.19.2",
    "numpy>=1.26.4",
    "redis>=5.0.7",
    "aioredis>=2.0.1",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "requests>=2.32.3",
    "aiohttp>=3.10.2",
    "structlog>=24.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.sql", "*.json", "*.yaml", "*.yml"]
